
option java_outer_classname="GetRunningTasksCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message GetRunningTasksCommand {
	optional int64 requestId = 1;
}